--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -436,6 +436,18 @@ input[type="radio"]:checked + label span {
 	border: 1px solid #39ADB4;
 	color: white;
 }
+.templatemo-del-btn {
+	border: 1px solid #ddd;
+	border-radius: 3px;
+	color: black;
+	padding: 5px 15px;
+	transition: all 0.3s ease;
+}
+.templatemo-del-btn:hover {
+	background-color: #B43757;
+	border: 1px solid #B43757;
+	color: white;
+}
 .templatemo-link { color: black; }
 .templatemo-link:hover { color: #39ADB4; }
 .templatemo-overflow-hidden { overflow: hidden; }
