--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -1147,3 +1147,16 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+
+.slide-enter-active,
+.slide-leave-active
+{
+    transition: transform 0.4s ease-out;
+}
+.slide-enter {
+    transform: translateX(-30%);
+}
+.slide-leave-to {
+    transform: translateX(30%);
+}
